# dapanoskop

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  ISSUES.md  Makefile  README.md  SECURITY.md
.claude/: settings.json
.claude/agents/: cloud-engineer.md  frontend-engineer.md  python-engineer.md  qa-engineer.md  requirements-engineer.md  security-engineer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  enforce-semi-linear.yml  release.yml  stale.yml
app/: .env.template  .gitignore  .prettierignore  eslint.config.js  package-lock.json  package.json  vite-s3-proxy.ts  vite.config.ts  vitest.config.ts
app/app/: app.css  root.tsx  routes.ts
app/app/components/: CostCenterCard.test.tsx  CostCenterCard.tsx  (+27 more)
app/fixtures/: index.json
docs/: SDS.md  SRS.md  URS.md  test-coverage-plan.md
docs/agents/: cloud-engineer.md  frontend-engineer.md  python-engineer.md  security-engineer.md
docs/change-proposals/: inventory-to-storage-lens.md
docs/wireframes/: cost-report.puml  login.puml  workload-detail.puml
lambda/: BACKFILL.md  pyproject.toml
lambda/src/dapanoskop/: categories.py  collector.py  handler.py  inventory.py  processor.py  storage_lens.py
lambda/tests/: conftest.py  test_categories.py  test_collector.py  test_data_contract.py  test_handler.py  test_inventory.py  test_processor.py  test_storage_lens.py
scripts/: generate-fixtures.py
skills/requirement-engineering/: SKILL.md
terraform/: .terraform.lock.hcl  .tflint.hcl  main.tf  outputs.tf  variables.tf  versions.tf
(+62 files in other folders)
