[project]
name = "dapanoskop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyarrow",
    "boto3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "moto[ce,s3]",
    "boto3-stubs",
    "ruff",
    "pip-audit",
    "cryptography>=46.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dapanoskop --cov-report=term-missing --cov-report=html --cov-fail-under=70"

[tool.hatch.build.targets.wheel]
packages = ["src/dapanoskop"]
